--- a/tutorial.html
+++ b/tutorial.html
@@ -24,7 +24,7 @@
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link" href="#intro">1. Intro</a></li>
+            <li class="nav__item"><a class="nav__link" href="#intro">1. Installatie</a></li>
             <li class="nav__item"><a class="nav__link" href="#html">2. HTML</a></li>
             <li class="nav__item"><a class="nav__link" href="#css">3. CSS</a></li>
             <li class="nav__item"><a class="nav__link" href="#js">4. JavaScript</a></li>
@@ -51,7 +51,7 @@
         </section>
         <section class="tutorial__content" id="intro">
             <section class="step">
-                 <h2 class="step__title">Stap 1: Mappenstructuur</h2>
+                 <h2 class="step__title">Stap 1: Installatie</h2>
                 <p class="step__text">Ga naar de officiële website van <a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code.</a> Op de startpagina zie je meteen een knop om de versie te downloaden die geschikt is voor jouw besturingssysteem (Windows, macOS of Linux). Klik op de knop om het installatiebestand te downloaden. Zodra je dit hebt gedaan kunnen we aan de slag met programmeren!</p>
                 <div class="step__content">
                     <h3 class="step__subtitle">1.1 Maak een nieuwe folder</h3>
